V4 QA Copy (VxScan Focused) (#5542)
* Enter the card PIN -> Enter Card PIN

* update ballot mode switching

- update copy
- provide modal (non danger accented) when moving from test to official for consistency across apps

* update printer loading copy

* Election Manager Settings -> Menu

* make select precinct placeholder consistent

* mounted -> inserted

* save CVRs modal updates

* move scanner buttons to a dedicated scanner tab on election manager screen

* calibration flow changes

* change the change precinct warning, remove 'Warning: '

* update Ballots Scanned to Sheets Scanned

* voter adjudication confirmation text

* clear odd style 3D USB graphic

* update polls paused resumed reports to sheets scanned count to match scanner

* fixup! voter adjudication confirmation text

--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -24,7 +24,7 @@
     "buttonBmdReviewCardActionPatDevice": "使用选择输入法修改您对本次选举的投票。",
     "buttonBmdSkipPatCalibration": "跳过识别",
     "buttonCancel": "取消",
-    "buttonCastBallotAsIs": "按实际进行投票",
+    "buttonCastBallot": "按实际进行投票",
     "buttonChange": "更改",
     "buttonClose": "关闭",
     "buttonContinueVoting": "继续投票",
@@ -45,7 +45,6 @@
     "buttonViewContests": "查看竞选项目",
     "buttonVoterSettings": "设置",
     "buttonYes": "是",
-    "buttonYesCastBallotAsIs": "是，按实际进行投票",
     "helpBmdControllerButtonFocusNext": "这是 \"向下 \"按钮，用于查看页面选项列表中的下一个项目。您可以使用 \"向上 \"和 \"向下 \"按钮在竞选中移动候选人。",
     "helpBmdControllerButtonFocusPrevious": "这是 \"向上 \"按钮，用于查看页面选项列表中的上一个项目。您可以使用 \"向上 \"和 \"向下 \"按钮浏览竞选中的候选人。",
     "helpBmdControllerButtonPageNext": "这是“向右”按钮，用于移动到下一页或竞选界面。您可以使用 \"向左 \"和 \"向右 \"按钮在选票上的所有竞选项目中移动。",
@@ -132,7 +131,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "空格",
     "labelNumBallotContests": "您选票上的竞选数量",
-    "labelNumBallotsScanned": "选票已扫描",
+    "labelNumSheetsScanned": "选票已扫描",
     "labelNumVotesRemaining": "本次竞选剩余票数",
     "labelNumVotesUnused": "未使用票数",
     "labelSelected": "已选",
@@ -377,7 +376,6 @@
     "titleBmdReviewScreen": "审核您的选票",
     "titleInternalConnectionProblem": "内部连接出现问题",
     "titleLanguageSettingsScreen": "选择您的选票语言",
-    "titleModalAreYouSure": "您确定吗？",
     "titleNoPowerDetected": "检测不到电源",
     "titleOfficialBallot": "正式选票",
     "titlePrecinct": "选区",
@@ -451,7 +449,7 @@
     "buttonBmdReviewCardActionPatDevice": "使用選擇輸入法修改您對本次選舉的投票。",
     "buttonBmdSkipPatCalibration": "跳過識別",
     "buttonCancel": "取消",
-    "buttonCastBallotAsIs": "按實際進行投票",
+    "buttonCastBallot": "按實際進行投票",
     "buttonChange": "更改",
     "buttonClose": "關閉",
     "buttonContinueVoting": "繼續投票",
@@ -472,7 +470,6 @@
     "buttonViewContests": "查看競選項目",
     "buttonVoterSettings": "設置",
     "buttonYes": "是",
-    "buttonYesCastBallotAsIs": "是，按實際進行投票",
     "helpBmdControllerButtonFocusNext": "這是 \"向下 \"按鈕，用於查看頁面選項列表中的下一個項目。您可以使用 \"向上 \"和 \"向下 \"按鈕在競選中移動候選人。",
     "helpBmdControllerButtonFocusPrevious": "這是 \"向上 \"按鈕，用於查看頁面選項列表中的上一個項目。您可以使用 \"向上 \"和 \"向下 \"按鈕瀏覽競選中的候選人。",
     "helpBmdControllerButtonPageNext": "這是「向右」按鈕，用於移動到下一頁或競選界面。您可以使用 \"向左 \"和 \"向右 \"按鈕在選票上的所有競選項目中移動。",
@@ -559,7 +556,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "空格",
     "labelNumBallotContests": "您選票上的競選數量",
-    "labelNumBallotsScanned": "選票已掃描",
+    "labelNumSheetsScanned": "選票已掃描",
     "labelNumVotesRemaining": "本次競選剩餘票數",
     "labelNumVotesUnused": "未使用票數",
     "labelSelected": "已選",
@@ -804,7 +801,6 @@
     "titleBmdReviewScreen": "審核您的選票",
     "titleInternalConnectionProblem": "內部連接出現問題",
     "titleLanguageSettingsScreen": "選擇您的選票語言",
-    "titleModalAreYouSure": "您確定嗎？",
     "titleNoPowerDetected": "檢測不到電源",
     "titleOfficialBallot": "正式選票",
     "titlePrecinct": "選區",
@@ -878,7 +874,7 @@
     "buttonBmdReviewCardActionPatDevice": "Use the select input to change your votes for this contest.",
     "buttonBmdSkipPatCalibration": "Skip Setup",
     "buttonCancel": "Cancel",
-    "buttonCastBallotAsIs": "Cast Ballot As Is",
+    "buttonCastBallot": "Cast Ballot As Is",
     "buttonChange": "Change",
     "buttonClose": "Close",
     "buttonContinueVoting": "Continue with Voting",
@@ -896,10 +892,9 @@
     "buttonReview": "Review",
     "buttonStartVoting": "Start Voting",
     "buttonStillVoting": "Yes, I’m still voting.",
-    "buttonViewContests": "View contests",
+    "buttonViewContests": "View Contests",
     "buttonVoterSettings": "Settings",
     "buttonYes": "Yes",
-    "buttonYesCastBallotAsIs": "Yes, Cast Ballot As Is",
     "helpBmdControllerButtonFocusNext": "This is the Down button, for focusing on the next item in a list of options on a page. You can use the Up and Down buttons to move through candidates in a contest.",
     "helpBmdControllerButtonFocusPrevious": "This is the Up button, for focusing on the previous item in a list of options on a page. You can use the Up and Down buttons to move through candidates in a contest.",
     "helpBmdControllerButtonPageNext": "This is the Right button, for moving to the next page or contest. You can use the Left and Right buttons to move through all the contests on your ballot.",
@@ -986,7 +981,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "space",
     "labelNumBallotContests": "Number of contests on your ballot:",
-    "labelNumBallotsScanned": "Ballots Scanned",
+    "labelNumSheetsScanned": "Sheets Scanned",
     "labelNumVotesRemaining": "Votes remaining in this contest:",
     "labelNumVotesUnused": "Number of unused votes:",
     "labelSelected": "Selected:",
@@ -1061,8 +1056,8 @@
     "noteScannerOvervoteContestsCardPlural": "Your votes in these contests will not be counted.",
     "noteScannerOvervoteContestsCardSingular": "Your votes in this contest will not be counted.",
     "noteScannerScanInProgress": "Scanning the marks on your ballot.",
-    "noteScannerUndervoteContestsCardPlural": "All other votes in these contests will count, even if you leave some blank.",
-    "noteScannerUndervoteContestsCardSingular": "All other votes in this contest will count, even if you leave some blank.",
+    "noteScannerUndervoteContestsCardPlural": "All other votes in these contests will count.",
+    "noteScannerUndervoteContestsCardSingular": "All other votes in this contest will count.",
     "noteThankYouForVoting": "Thank you for voting.",
     "noteVoterSettingsAudioMuted": "Audio is muted",
     "noteVoterSettingsAudioNoHeadphones": "No headphones detected.",
@@ -1231,7 +1226,6 @@
     "titleBmdReviewScreen": "Review Your Votes",
     "titleInternalConnectionProblem": "Internal Connection Problem",
     "titleLanguageSettingsScreen": "Select Your Ballot Language",
-    "titleModalAreYouSure": "Are you sure?",
     "titleNoPowerDetected": "No Power Detected",
     "titleOfficialBallot": "Official Ballot",
     "titlePrecinct": "Precinct",
@@ -1305,7 +1299,7 @@
     "buttonBmdReviewCardActionPatDevice": "Usa el botón de seleccionar para cambiar tus votos en esta contienda.",
     "buttonBmdSkipPatCalibration": "Saltar identificación",
     "buttonCancel": "Cancelar",
-    "buttonCastBallotAsIs": "Voto emitido tal como está",
+    "buttonCastBallot": "Voto emitido tal como está",
     "buttonChange": "Cambio",
     "buttonClose": "Cerrar",
     "buttonContinueVoting": "Continúe con la votación",
@@ -1326,7 +1320,6 @@
     "buttonViewContests": "Ver concursos",
     "buttonVoterSettings": "Configuraciones",
     "buttonYes": "Sí",
-    "buttonYesCastBallotAsIs": "Sí, emita su voto tal cual",
     "helpBmdControllerButtonFocusNext": "Este es el botón Abajo, para centrarse en el siguiente elemento de una lista de opciones en una página. Usted puede utilizar los botones Arriba y Abajo para desplazarse por los candidatos de un concurso.",
     "helpBmdControllerButtonFocusPrevious": "Este es el botón Arriba, para centrarse en el elemento anterior en una lista de opciones en una página. Puede utilizar los botones Arriba y Abajo para desplazarse entre los candidatos en un concurso.",
     "helpBmdControllerButtonPageNext": "Este es el botón derecho, para pasar a la siguiente página o concurso. Puede utilizar los botones Izquierda y Derecha para desplazarse por todas las contiendas en su boleta.",
@@ -1413,7 +1406,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "espacio",
     "labelNumBallotContests": "Número de contiendas en su boleta:",
-    "labelNumBallotsScanned": "Boletas escaneadas",
+    "labelNumSheetsScanned": "Boletas escaneadas",
     "labelNumVotesRemaining": "Votos restantes en este concurso:",
     "labelNumVotesUnused": "Número de votos no utilizados:",
     "labelSelected": "Seleccionados:",
@@ -1658,7 +1651,6 @@
     "titleBmdReviewScreen": "Revise sus votos",
     "titleInternalConnectionProblem": "Problema de conexión interna",
     "titleLanguageSettingsScreen": "Seleccione el idioma de su boleta",
-    "titleModalAreYouSure": "¿Está seguro?",
     "titleNoPowerDetected": "No se detectó energía",
     "titleOfficialBallot": "Boleta oficial",
     "titlePrecinct": "Recinto",
