build: remove explicit `Makefile` dependency builds
We no longer need these now that `pnpm build` knows how to build dependencies properly.

--- a/apps/admin/frontend/Makefile
+++ b/apps/admin/frontend/Makefile
@@ -5,9 +5,7 @@ FORCE:
 install:
 
 build: FORCE
-	pnpm install && \
-		pnpm --dir ../backend build && \
-		pnpm build
+	pnpm install && pnpm build
 
 bootstrap: install build
 
