--- a/apps/central-scan/frontend/Makefile
+++ b/apps/central-scan/frontend/Makefile
@@ -5,10 +5,7 @@ FORCE:
 install:
 
 build: FORCE
-	pnpm install && \
-		pnpm --dir ../../../libs/ballot-interpreter build && \
-		pnpm --dir ../backend build && \
-		pnpm build
+	pnpm install && pnpm build
 
 bootstrap: install build
 
