add screenshot generation

--- a/apps/admin/integration-testing/.env
+++ b/apps/admin/integration-testing/.env
@@ -1,3 +1,4 @@
 REACT_APP_VX_SKIP_CAST_VOTE_RECORDS_AUTHENTICATION=TRUE
+REACT_APP_VX_SKIP_CVR_BALLOT_HASH_CHECK=TRUE
 REACT_APP_VX_USE_MOCK_USB_DRIVE=TRUE
 REACT_APP_VX_USE_MOCK_PRINTER=TRUE
