Update machine certs to include machine ID

--- a/libs/auth/certs/openssl.cnf
+++ b/libs/auth/certs/openssl.cnf
@@ -49,6 +49,7 @@ jurisdiction = 1.3.6.1.4.1.59817.2
 cardType = 1.3.6.1.4.1.59817.3
 electionId = 1.3.6.1.4.1.59817.4
 electionDate = 1.3.6.1.4.1.59817.5
+machineId = 1.3.6.1.4.1.59817.6
 
 ####################################################################
 [ ca ]
