--- a/libs/custom-paper-handler/package.json
+++ b/libs/custom-paper-handler/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Interface for the Custom 'Paper Handler' (print-scan unit)",
   "keywords": [],
-  "license": "AGPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
   "scripts": {
