--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "@votingworks/admin-frontend",
   "version": "0.1.0",
   "private": true,
+  "license": "GPL-3.0-only",
   "files": [
     "build",
     "Makefile",
