--- a/libs/cdf-schema-builder/package.json
+++ b/libs/cdf-schema-builder/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@votingworks/cdf-schema-builder",
   "version": "1.0.0",
+  "license": "GPL-3.0-only",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "bin": {
