--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@votingworks/db",
   "private": true,
+  "license": "GPL-3.0-only",
   "version": "0.0.0",
   "description": "Database utils for VxSuite",
   "main": "build/index.js",
@@ -19,7 +20,6 @@
     "test:watch": "jest --watch"
   },
   "author": "VotingWorks Eng <eng@voting.works>",
-  "license": "GPL-3.0",
   "packageManager": "pnpm@8.15.5",
   "dependencies": {
     "@votingworks/basics": "workspace:*",
