--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "VotingWorks monorepo rules for ESLint",
   "keywords": [],
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
   "types": "build/index.d.ts",
