--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "A library to create type-safe RPC glue code.",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
   "types": "build/index.d.ts",
