--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -2,6 +2,7 @@
   "name": "@votingworks/image-utils",
   "private": true,
   "version": "1.0.0",
+  "license": "GPL-3.0-only",
   "description": "Image utilities for VxSuite",
   "main": "build/index.js",
   "scripts": {
@@ -18,7 +19,6 @@
     "test:watch": "jest --watch"
   },
   "author": "VotingWorks Eng <eng@voting.works>",
-  "license": "GPL-3.0",
   "packageManager": "pnpm@8.15.5",
   "dependencies": {
     "@votingworks/basics": "workspace:*",
