--- a/libs/pdi-scanner/package.json
+++ b/libs/pdi-scanner/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Scanner interface for the PDI PageScan 6",
-  "license": "AGPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
   "types": "build/index.d.js",
