--- a/libs/types-rs/package.json
+++ b/libs/types-rs/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Shared types for VotingWorks Rust projects",
-  "license": "AGPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "scripts": {
     "build": "cargo build",
