--- a/script/package.json
+++ b/script/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-development",
   "private": true,
   "description": "",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "author": "VotingWorks Eng <eng@voting.works>",
   "scripts": {
     "build": "tsc --build"
