--- a/apps/mark-scan/frontend/prodserver/package.json
+++ b/apps/mark-scan/frontend/prodserver/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@votingworks/mark-scan-prodserver",
   "version": "1.0.0",
+  "license": "GPL-3.0-only",
   "main": "index.js",
   "dependencies": {
     "express": "4.18.2",
