--- a/libs/@types/stream-chopper/package.json
+++ b/libs/@types/stream-chopper/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@types/stream-chopper",
   "version": "0.0.1-development",
+  "license": "GPL-3.0-only",
   "types": "stream-chopper",
   "dependencies": {
     "@types/node": "20.16.0"
