--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ crc16 = "0.4.0"
 crossterm = "0.27.0"
 csv = "1.3.0"
 ctrlc = "3.4.2"
+divan = "0.1.15"
 hex = "0.4.3"
 image = "0.25.0"
 imageproc = "0.24.0"
