--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "apps/mark-scan/daemon-utils",
   "apps/mark-scan/pat-device-input",
   "libs/ballot-interpreter",
+  "libs/browser",
   "libs/logging",
   "libs/pdi-scanner",
   "libs/types-rs",
@@ -19,7 +20,9 @@ license-file = "LICENSE"
 ab_glyph = "0.2.23"
 anyhow = "1.0.75"
 base64 = "0.22.0"
+base64-serde = "0.8.0"
 bitter = "0.6.1"
+cairo-rs = { version = "0.18.5", features = ["png"] }
 chrono = "0.4.31"
 clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
 color-eyre = "0.6.2"
@@ -27,11 +30,15 @@ crc16 = "0.4.0"
 crossterm = "0.27.0"
 csv = "1.3.0"
 ctrlc = "3.4.2"
+dirs = "5.0.1"
 divan = "0.1.15"
+futures = "0.3.31"
+gtk = "0.18.1"
 hex = "0.4.3"
 image = "0.25.0"
 imageproc = "0.24.0"
 itertools = "0.12.1"
+javascriptcore-rs = { version = "1.1.2", features = ["v2_28"] }
 libc = "0.2.153"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
@@ -47,7 +54,7 @@ rand = "0.8.5"
 rayon = "1.5.3"
 rqrr = "0.7.1"
 rusb = "0.9.3"
-serde = { version = "1.0.150", features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.89"
 serialport = "4.2.2"
 tempfile = "3.3.0"
@@ -57,6 +64,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
 users = "0.11.0"
+webkit2gtk = { version = "2.0.1", features = ["v2_40"] }
 zbar-rust = "0.0.23"
 
 [workspace.lints.rust]
