apps/scan: Add feature flag to use mock PDI scanner

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ REACT_APP_VX_SKIP_PIN_ENTRY=FALSE
 REACT_APP_VX_USE_MOCK_CARDS=FALSE
 REACT_APP_VX_USE_MOCK_USB_DRIVE=FALSE
 REACT_APP_VX_USE_MOCK_PRINTER=FALSE
+REACT_APP_VX_USE_MOCK_PDI_SCANNER=FALSE
 REACT_APP_VX_SKIP_CVR_BALLOT_HASH_CHECK=FALSE
 REACT_APP_VX_SKIP_ELECTION_PACKAGE_AUTHENTICATION=FALSE
 REACT_APP_VX_SKIP_CAST_VOTE_RECORDS_AUTHENTICATION=FALSE
