--- a/libs/fixture-generators/package.json
+++ b/libs/fixture-generators/package.json
@@ -15,6 +15,7 @@
     "clean": "pnpm --filter $npm_package_name... clean:self",
     "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "generate-cvr-fixtures": "./bin/generate-cvr-fixtures",
+    "generate-election-packages": "./bin/regenerate-election-packages",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
@@ -27,14 +28,17 @@
     "@votingworks/auth": "workspace:*",
     "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
+    "@votingworks/design-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/fs": "workspace:*",
+    "@votingworks/hmpb": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "js-sha256": "^0.9.0",
+    "jszip": "^3.9.1",
     "nanoid": "^3.3.7",
     "uuid": "9.0.1",
     "yargs": "17.7.1",
@@ -54,6 +58,9 @@
     "jest-watch-typeahead": "^2.2.2",
     "tmp": "^0.2.1",
     "ts-jest": "29.1.1"
+  },
+  "engines": {
+    "node": ">= 12"
   },
   "packageManager": "pnpm@8.15.5"
 }
