--- a/libs/mark-flow-ui/package.json
+++ b/libs/mark-flow-ui/package.json
@@ -22,9 +22,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:watch": "jest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest run --coverage",
+    "test:watch": "vitest",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -60,7 +60,6 @@
     "@types/base64-js": "^1.3.0",
     "@types/debug": "4.1.8",
     "@types/history": "4.7.11",
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "20.16.0",
@@ -71,6 +70,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
@@ -83,11 +83,7 @@
     "fast-check": "2.23.2",
     "history": "4.10.1",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-styled-components": "^7.1.1",
-    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "20.0.1",
     "lint-staged": "11.0.0",
     "lorem-ipsum": "^2.0.8",
     "parse-css-color": "^0.2.1",
@@ -97,9 +93,9 @@
     "sort-package-json": "^1.50.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.11",
-    "ts-jest": "29.1.1",
     "util": "^0.12.4",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "react": "18.3.1",
