--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "storybook": "^7.2.2",
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vitest": "^2.1.8"
   },
   "pnpm": {
     "overrides": {
