move hmpb strings to libs backend

--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -28,6 +28,7 @@
     "type-check": "tsc --build"
   },
   "dependencies": {
+    "@votingworks/backend": "workspace:*",
     "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
