--- a/libs/hmpb/tsconfig.json
+++ b/libs/hmpb/tsconfig.json
@@ -19,6 +19,7 @@
   },
   "references": [
     { "path": "../basics/tsconfig.build.json" },
+    { "path": "../backend/tsconfig.build.json" },
     { "path": "../ballot-encoder/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
