a bunch of interrelated changes
- convert `ballot-interpreter` benchmarks to `vitest`
- convert `test-utils-vitest` to `type: module` so that the built version is ESM; this is needed because you're not allowed to `require('vitest')`
- run `ballot-interpreter` tests as modules by renaming to `.mts`

--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -10,7 +10,7 @@
     "build"
   ],
   "scripts": {
-    "benchmark": "jest --runInBand --projects benchmarks",
+    "benchmark": "cd benchmarks && vitest",
     "build": "pnpm --filter $npm_package_name... build:self",
     "build:self": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
     "build:rust-addon": "cargo-cp-artifact -nc build/addon.node -- cargo build --message-format=json-render-diagnostics --release --offline",
