--- a/libs/ballot-interpreter/tsconfig.build.json
+++ b/libs/ballot-interpreter/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src", "src/data/*.json"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": [
+    "**/*.test.mts",
+    "**/*.test.mtsx",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ],
   "compilerOptions": {
     "noEmit": false,
     "rootDir": "src",
