--- a/libs/ballot-interpreter/tsconfig.build.json
+++ b/libs/ballot-interpreter/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src", "src/data/*.json"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": [
+    "**/*.test.mts",
+    "**/*.test.mtsx",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ],
   "compilerOptions": {
     "noEmit": false,
     "rootDir": "src",
@@ -17,6 +22,7 @@
     { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../printing/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
+    { "path": "../test-utils-vitest/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" },
     { "path": "../utils/tsconfig.build.json" }
   ]
