--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -14,9 +14,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:ci": "vitest run --coverage",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest"
   },
   "packageManager": "pnpm@8.15.5",
   "dependencies": {
@@ -32,23 +32,19 @@
     "tmp": "^0.2.1"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "20.16.0",
     "@types/pdfjs-dist": "2.1.3",
     "@types/pixelmatch": "^5.2.6",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   }
 }
