--- a/libs/utils/tsconfig.build.json
+++ b/libs/utils/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src", "src/data/*.json", "src/data/*.zip"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "include": ["src", "src/data/*.json"],
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.test.mts",
+    "**/*.test.mtsx"
+  ],
   "compilerOptions": {
     "noEmit": false,
     "rootDir": "src",
