test(utils): replace `jest` with `vitest` (#5713)
* test(utils): replace `jest` with `vitest`

* test(utils): use `vitest` API instead of `jest` API

* test(utils): use built-in env testing support

* test(utils): replace `jest` config with `vitest` config

* docs(utils): reference `vi.mock` instead of `jest.mock`

--- a/libs/utils/tsconfig.build.json
+++ b/libs/utils/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src", "src/**/*.json", "src/data/*.zip"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.test.mts",
+    "**/*.test.mtsx"
+  ],
   "compilerOptions": {
     "noEmit": false,
     "rootDir": "src",
