--- a/libs/ballot-encoder/package.json
+++ b/libs/ballot-encoder/package.json
@@ -16,10 +16,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "jest --watch",
+    "test:ci": "vitest run --coverage",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -28,19 +27,16 @@
     "js-sha256": "^0.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/text-encoding": "^0.0.35",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
