--- a/libs/message-coder/package.json
+++ b/libs/message-coder/package.json
@@ -14,9 +14,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:ci": "vitest run --coverage",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -24,14 +24,11 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
