--- a/libs/message-coder/package.json
+++ b/libs/message-coder/package.json
@@ -20,10 +20,10 @@
     "type-check": "tsc --build"
   },
   "dependencies": {
-    "@votingworks/basics": "workspace:*",
-    "buffer": "^6.0.3"
+    "@votingworks/basics": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "20.16.0",
     "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
