--- a/libs/ballot-encoder/tsconfig.build.json
+++ b/libs/ballot-encoder/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*.test.mts"],
   "compilerOptions": {
     "noEmit": false,
     "rootDir": "src",
