test: replace `test-utils-vitest` with `test-utils`
We now have the mock function parameterized, so we can use `test-utils` in both jest and vitest.

--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -35,7 +35,7 @@
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/qrdetect": "^1.0.1",
-    "@votingworks/test-utils-vitest": "workspace:*",
+    "@votingworks/test-utils": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "better-sqlite3": "8.2.0",
