--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -23,9 +23,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:ci": "TZ=America/Anchorage vitest run --coverage",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "browserslist": {
@@ -75,7 +75,6 @@
     "@types/connect": "^3.4.35",
     "@types/debug": "4.1.8",
     "@types/history": "4.7.11",
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/node": "20.16.0",
     "@types/pluralize": "^0.0.29",
@@ -86,6 +85,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
@@ -96,17 +96,12 @@
     "eslint-plugin-vx": "workspace:*",
     "history": "4.10.1",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-mock": "27",
-    "jest-styled-components": "^7.1.1",
-    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "20.0.1",
     "lint-staged": "11.0.0",
     "react-app-polyfill": "3.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
