--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -82,6 +82,7 @@
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
     "@types/zip-stream": "workspace:*",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "csv-parse": "^5.5.0",
     "esbuild": "0.21.2",
@@ -98,7 +99,8 @@
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
     "supertest": "^6.0.1",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 16"
