--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -112,6 +112,7 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/uuid": "9.0.5",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/admin-backend": "workspace:*",
     "@votingworks/backend": "workspace:*",
     "@votingworks/fs": "workspace:*",
@@ -131,7 +132,8 @@
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
