--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -62,6 +62,7 @@
     "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/fs": "workspace:*",
@@ -80,7 +81,8 @@
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
