--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -101,6 +101,7 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/tmp": "0.2.4",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/design-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
@@ -119,7 +120,8 @@
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
     "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
