--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -60,6 +60,7 @@
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -72,7 +73,8 @@
     "lint-staged": "11.0.0",
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 16"
