--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -78,6 +78,7 @@
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
@@ -93,6 +94,7 @@
     "sort-package-json": "^1.50.0",
     "supertest": "^6.0.1",
     "ts-jest": "29.1.1",
+    "vitest": "^2.1.8",
     "wait-for-expect": "^3.0.2"
   },
   "engines": {
