--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -86,6 +86,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
@@ -106,7 +107,8 @@
     "react-app-polyfill": "3.0.0",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
