--- a/apps/scan/frontend/prodserver/package.json
+++ b/apps/scan/frontend/prodserver/package.json
@@ -7,5 +7,9 @@
     "express": "4.18.2",
     "http-proxy-middleware": "3.0.3"
   },
+  "devDependencies": {
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "vitest": "^2.1.8"
+  },
   "packageManager": "pnpm@8.15.5"
 }
