--- a/libs/@types/compress-commons/package.json
+++ b/libs/@types/compress-commons/package.json
@@ -5,5 +5,9 @@
   "types": "compress-commons",
   "dependencies": {
     "@types/readable-stream": "2.3.9"
+  },
+  "devDependencies": {
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "vitest": "^2.1.8"
   }
 }
