--- a/libs/@types/stream-chopper/package.json
+++ b/libs/@types/stream-chopper/package.json
@@ -5,5 +5,9 @@
   "types": "stream-chopper",
   "dependencies": {
     "@types/node": "20.16.0"
+  },
+  "devDependencies": {
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "vitest": "^2.1.8"
   }
 }
