--- a/libs/basics/package.json
+++ b/libs/basics/package.json
@@ -28,6 +28,7 @@
     "@types/deep-eql": "^4.0.2",
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
@@ -36,7 +37,8 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
