--- a/libs/bmd-ballot-fixtures/package.json
+++ b/libs/bmd-ballot-fixtures/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/react": "18.3.3",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
@@ -52,7 +53,8 @@
     "react-dom": "18.3.1",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "react": "18.3.1"
