--- a/libs/custom-scanner/package.json
+++ b/libs/custom-scanner/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/w3c-web-usb": "^1.0.6",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -47,7 +48,8 @@
     "jest-mock-extended": "^3.0.4",
     "jest-watch-typeahead": "^2.2.2",
     "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
