--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -46,11 +46,13 @@
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@typescript-eslint/rule-tester": "^6.7.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "react": "18.3.1",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   }
 }
