--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
@@ -50,7 +51,8 @@
     "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
