--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^29.5.3",
     "@types/luxon": "^3.0.0",
     "@types/node-fetch": "^2.6.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "expect-type": "^0.15.0",
     "express": "4.18.2",
@@ -41,7 +42,8 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
