--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -55,6 +55,7 @@
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fs": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "esbuild": "0.21.2",
@@ -68,7 +69,8 @@
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
     "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
