--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -40,6 +40,7 @@
     "@types/pdfjs-dist": "2.1.3",
     "@types/pixelmatch": "^5.2.6",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
@@ -49,6 +50,7 @@
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   }
 }
