--- a/libs/monorepo-utils/package.json
+++ b/libs/monorepo-utils/package.json
@@ -28,6 +28,7 @@
     "@types/node": "20.16.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild-runner": "2.2.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -45,7 +46,8 @@
     "prettier": "3.0.3",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
