--- a/libs/pdi-scanner/package.json
+++ b/libs/pdi-scanner/package.json
@@ -40,6 +40,7 @@
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
@@ -47,7 +48,8 @@
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
