--- a/libs/printing/package.json
+++ b/libs/printing/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/image-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -59,7 +60,8 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
