--- a/libs/res-to-ts/package.json
+++ b/libs/res-to-ts/package.json
@@ -34,6 +34,7 @@
     "@types/mime": "^2.0.3",
     "@types/node": "20.16.0",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -42,6 +43,7 @@
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "vitest": "^2.1.8"
   }
 }
