--- a/libs/types-rs/package.json
+++ b/libs/types-rs/package.json
@@ -11,5 +11,9 @@
     "lint": "cargo clippy",
     "test": "cargo test"
   },
-  "packageManager": "pnpm@8.15.5"
+  "packageManager": "pnpm@8.15.5",
+  "devDependencies": {
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "vitest": "^2.1.8"
+  }
 }
