--- a/script/package.json
+++ b/script/package.json
@@ -17,10 +17,12 @@
   },
   "devDependencies": {
     "@types/node": "20.16.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "prettier": "3.0.3",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
