--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "build": "pnpm --filter $npm_package_name... build:self",
+    "build:prod": "pnpm --filter-prod $npm_package_name... build:self",
     "build:self": "tsc --build tsconfig.build.json",
     "clean": "pnpm --filter $npm_package_name... clean:self",
     "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
