--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -64,6 +64,7 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
