--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -18,9 +18,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:ci": "pnpm build && TZ=America/Anchorage vitest run --coverage",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -55,9 +55,9 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/debug": "4.1.8",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
     "@types/micromatch": "^4.0.2",
@@ -66,20 +66,18 @@
     "@types/stream-chopper": "workspace:*",
     "@types/stream-json": "^1.7.3",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/fs": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.set": "^4.3.2",
     "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
