--- a/libs/fixture-generators/package.json
+++ b/libs/fixture-generators/package.json
@@ -44,6 +44,7 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
