--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -24,16 +24,15 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js & node ./build/worker/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:debug": "TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:ci": "PGUSER=postgres PGDATABASE=circle_test TZ=America/Anchorage ./scripts/test_ci.sh",
+    "test:coverage": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage jest --coverage",
+    "test:debug": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
+    "test:watch": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
   },
   "dependencies": {
     "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
-    "@votingworks/db": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/hmpb": "workspace:*",
     "@votingworks/logging": "workspace:*",
